--- a/index.html
+++ b/index.html
@@ -1,27 +1,50 @@
 <!DOCTYPE html>
-<html>
+<html lang="ko">
 <head>
   <meta charset="UTF-8">
-  <title>엔터 타이머</title>
+  <title>LED 스타일 타이머</title>
+  <!-- Google Fonts - Orbitron (디지털 느낌의 폰트) -->
+  <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@700&display=swap" rel="stylesheet">
   <style>
-    body { font-family: Arial, sans-serif; text-align: center; margin-top: 50px; }
-    #timer { font-size: 2em; }
+    /* 화면 중앙 정렬 및 배경 설정 */
+    body {
+      margin: 0;
+      padding: 0;
+      box-sizing: border-box;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      height: 100vh;
+      background-color: #111; /* 어두운 배경 */
+    }
+
+    /* 타이머 LED 스타일 */
+    #timer {
+      font-family: 'Orbitron', sans-serif; /* 디지털 느낌의 폰트 */
+      font-size: 6em;                     /* 글자 크기 조절 */
+      color: #ff0000;                     /* 빨간색 LED 느낌 */
+      background-color: #000;             /* LED 배경 (검정) */
+      padding: 0.2em 0.5em;               /* 여백 */
+      border-radius: 0.2em;               /* 살짝 둥근 모서리 */
+      text-shadow: 0 0 20px rgba(255, 0, 0, 0.8); /* 발광 효과 */
+    }
   </style>
 </head>
 <body>
-  <h1>엔터키 타이머</h1>
-  <p id="timer">0.0초</p>
+  <div id="timer">0.0</div>
 
   <script>
     let timerDisplay = document.getElementById('timer');
     let startTime, timerInterval;
     let isRunning = false;
     
+    // 타이머를 갱신하는 함수
     function updateTimer() {
       const elapsed = ((Date.now() - startTime) / 1000).toFixed(1);
-      timerDisplay.textContent = elapsed + "초";
+      timerDisplay.textContent = elapsed;
     }
     
+    // 엔터키 누르면 시작/정지
     document.addEventListener('keydown', function(event) {
       if (event.key === 'Enter') {
         if (!isRunning) {
