--- a/index.html
+++ b/index.html
@@ -19,15 +19,20 @@
       box-sizing: border-box;
     }
 
-    /* LED 스타일의 타이머 */
+    /* LED 스타일의 타이머 - 배경 고정 */
     #timer {
       font-family: 'Orbitron', sans-serif; /* 디지털 느낌 폰트 */
       font-size: 25vw;                     /* 뷰포트 너비 대비 25% 크기 */
-      color: #ff0000;                     /* 빨간색 LED 느낌 */
-      background-color: #000;             /* LED 배경 (검정) */
-      padding: 0.2em 0.3em;               /* 글자 주변 약간의 여백 */
-      border-radius: 0.2em;               /* 살짝 둥근 모서리 */
+      color: #ff0000;                      /* 빨간색 LED 느낌 */
+      background-color: #000;              /* LED 배경 (검정) */
+      border-radius: 0.2em;                /* 살짝 둥근 모서리 */
       text-shadow: 0 0 20px rgba(255, 0, 0, 0.8); /* 발광 효과 */
+      width: 50vw;                         /* 고정 너비 */
+      height: 50vw;                        /* 고정 높이 */
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      box-sizing: border-box;              /* 패딩 포함 크기 유지 */
     }
   </style>
 </head>
